--- a/GameSources/GameSources.vcxitems.filters
+++ b/GameSources/GameSources.vcxitems.filters
@@ -14,6 +14,7 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)MainCamera.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)PlayerShot.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)PlayerStatusController.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)ShotDestroy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Character.h" />
@@ -29,5 +30,6 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)MainCamera.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)PlayerShot.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)PlayerStatusController.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)ShotDestroy.h" />
   </ItemGroup>
 </Project>
