武器のステータスを追加した(cppとｈ)

--- a/GameSources/GameSources.vcxitems.filters
+++ b/GameSources/GameSources.vcxitems.filters
@@ -16,6 +16,7 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)PlayerStatusController.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)ShotDestroy.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)Ground.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)WeaponStatus.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Character.h" />
@@ -33,5 +34,6 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)PlayerStatusController.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)ShotDestroy.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)Ground.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)WeaponStatus.h" />
   </ItemGroup>
 </Project>
