中身の変更(GemaStage.cppとWeaponSrtatus.cpp)

--- a/GameSources/GameSources.vcxitems.filters
+++ b/GameSources/GameSources.vcxitems.filters
@@ -15,8 +15,10 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)PlayerShot.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)PlayerStatusController.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)ShotDestroy.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)Ground.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)WeaponStatus.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)Field.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)HpBar.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)LevelUpSprites.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)RandomSelectLevelUp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Character.h" />
@@ -33,7 +35,9 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)PlayerShot.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)PlayerStatusController.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)ShotDestroy.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)Ground.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)WeaponStatus.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)Field.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)HpBar.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)LevelUpSprites.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)RandomSelectLevelUp.h" />
   </ItemGroup>
 </Project>
