ランダムなレベルアップボタンを出す機能を実装

--- a/GameSources/GameSources.vcxitems.filters
+++ b/GameSources/GameSources.vcxitems.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)WeaponStatus.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)GaugeSizeSetting.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Character.h">
@@ -115,6 +118,9 @@
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)WeaponStatus.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)GaugeSizeSetting.h">
       <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
