--- a/GameSources/GameSources.vcxitems.filters
+++ b/GameSources/GameSources.vcxitems.filters
@@ -67,6 +67,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)CrossKey.cpp">
       <Filter>Sources\UI</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)EnemyBullet.cpp">
+      <Filter>Sources\Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Project.h">
@@ -134,6 +137,9 @@
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)CrossKey.h">
       <Filter>Headers\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)EnemyBullet.h">
+      <Filter>Headers\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
