--- a/GameSources/GameSources.vcxitems.filters
+++ b/GameSources/GameSources.vcxitems.filters
@@ -82,6 +82,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)SpurtLava.cpp">
       <Filter>Sources\Gimmic</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)ExpNumber.cpp">
+      <Filter>Sources\UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Project.h">
@@ -164,6 +167,9 @@
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)SpurtLava.h">
       <Filter>Headers\Gimmic</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)ExpNumber.h">
+      <Filter>Headers\UI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
