単純な動きの敵を追加

--- a/GameSources/GameSources.vcxitems.filters
+++ b/GameSources/GameSources.vcxitems.filters
@@ -103,6 +103,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)ResultSprite.cpp">
       <Filter>Sources\UI\SceneUI</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)SimpleEnemy.cpp">
+      <Filter>Sources\Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Project.h">
@@ -206,6 +209,12 @@
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)TitleSprite.h">
       <Filter>Headers\UI\SceneUI</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)SimpleEnemy.h">
+      <Filter>Headers\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Utility.h">
+      <Filter>Headers\Other</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
